# MIMISK-Sim

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  README.md
ProjectSettings/: PackageManagerSettings.asset  ProjectSettings.asset  TagManager.asset
docs/: MIMISK_DRONE_AGENT_READINESS.md  MIMISK_MINIROV_AUTONOMY_ARCHITECTURE.md  MIMISK_Physical_Tether_Upgrade_README.md  MIMISK_ROS2_GRPC_COMMANDS.md  MIMISK_SIM_ROADMAP_PHASES.md  README.md  architecture.md  benchmarks.md  coordinate_frames.md  dataset_and_rosbags.md  grpc_api.md  paper_outline.md  private_string_scan.txt  quick_start.md  research_use_cases.md  ros2_api.md  sensors_ground_truth_noise.md  source_header_templates.md  unity_bridge_public_release.md
examples/: README.md
figures/: benchmark_workflow.mmd  mimisk_architecture.mmd  mimisk_frame_tree.mmd
proto/: mimisk_bridge.proto
ros2_ws/src/mimisk_grpc_adapter/: package.xml  setup.cfg  setup.py
ros2_ws/src/mimisk_grpc_adapter/mimisk_grpc_adapter/: experiment_runner.py  inputs_gamepad_mapper.py  server.py  server.py.bak_manual_topics_fix  server.py.bak_phase3b_camera  server.py.bak_phase3d_clock_tf  server.py.bak_phase4a_external_reference
ros2_ws/src/mimisk_grpc_adapter/mimisk_grpc_adapter/protobuf/: mimisk_bridge_pb2.py  mimisk_bridge_pb2_grpc.py
ros2_ws/src/mimisk_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/mimisk_msgs/msg/: CommandResult.msg  DroneState.msg  ExternalReference.msg  GamepadCommand.msg  MiniROVState.msg  TetherState.msg
scripts/: build_mimisk_ros2_bridge.sh  generate_mimisk_grpc_csharp.sh  mimisk_ros2_env.sh  (+7 more)
(+551 files in other folders)
